100,000 functions was too much for cargo and for my ram, so i changed it to 100, and also did some refactoring

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "is_odd"
 version = "0.1.0"
+authors = ["Pranav Balaji Pooruli"]
 edition = "2021"
+description = "A library for categorizing and operating on integers"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
